<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_login_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/background_blue">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/login_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_login_header"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <!-- 用户名登陆 -->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_username"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <View
            android:id="@+id/v_username"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_username"
            android:layout_marginTop="10dp"
            android:background="#D8DDE1" />

        <!-- 密码登陆 -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_username"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/input_password"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <View
            android:id="@+id/v_password"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_password"
            android:layout_marginTop="10dp"
            android:background="#D8DDE1" />

        <Button
            android:id="@+id/bt_enter_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_password"
            android:layout_marginTop="10dp"
            android:background="@color/button_color"
            android:text="@string/login"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_enter_login"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/find_password"
            android:textColor="@color/string_blue"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_enter_login"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/free_register"
            android:textColor="#2999CE"
            android:textSize="24sp" />

    </RelativeLayout>


</RelativeLayout>